# Chip-8-Emulator

./: .gitignore  CMakeLists.txt
Games/: notes.txt
cmake_modules/: FindSFML.cmake
src/: InputHandler.cpp  display.cpp  display.hpp  emulator.cpp  emulator.h  emulator.hpp  input-handler.cpp  input-handler.hpp  instruction.h  instruction.hpp  main.cpp
